APIs/azure.com/servicefabric/6.2.0.9/javascript-client/README.md
# service_fabric_client_apis

ServiceFabricClientApis - JavaScript client for service_fabric_client_apis
Service Fabric REST Client APIs allows management of Service Fabric clusters, applications and services.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 6.2.0.9
- Package version: 6.2.0.9
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install service_fabric_client_apis --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your service_fabric_client_apis from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ServiceFabricClientApis = require('service_fabric_client_apis');


var api = new ServiceFabricClientApis.ApplicationApi()
var apiVersion = "'6.0'"; // {String} The version of the API. This parameter is required and its value must be '6.0'.  Service Fabric REST API version is based on the runtime version in which the API was introduced or was changed. Service Fabric runtime supports more than one version of the API. This is the latest supported version of the API. If a lower API version is passed, the returned response may be different from the one documented in this specification.  Additionally the runtime accept any version that is higher than the latest supported version up to the current version of the runtime. So if the latest API version is 6.0, but if the runtime is 6.1, in order to make it easier to write the clients, the runtime will accept version 6.1 for that API. However the behavior of the API will be as per the documented 6.0 version.
var applicationDescription = new ServiceFabricClientApis.ApplicationDescription(); // {ApplicationDescription} Description for creating an application.
var opts = {
  'timeout': 60 // {Number} The server timeout for performing the operation in seconds. This timeout specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully.');
  }
};
api.createApplication(apiVersion, applicationDescription, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *http://azure.local:19080*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ServiceFabricClientApis.ApplicationApi* | [**createApplication**](docs/ApplicationApi.md#createApplication) | **POST** /Applications/$/Create | Creates a Service Fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**deleteApplication**](docs/ApplicationApi.md#deleteApplication) | **POST** /Applications/{applicationId}/$/Delete | Deletes an existing Service Fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationHealth**](docs/ApplicationApi.md#getApplicationHealth) | **GET** /Applications/{applicationId}/$/GetHealth | Gets the health of the service fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationHealthUsingPolicy**](docs/ApplicationApi.md#getApplicationHealthUsingPolicy) | **POST** /Applications/{applicationId}/$/GetHealth | Gets the health of a Service Fabric application using the specified policy.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationInfo**](docs/ApplicationApi.md#getApplicationInfo) | **GET** /Applications/{applicationId} | Gets information about a Service Fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationInfoList**](docs/ApplicationApi.md#getApplicationInfoList) | **GET** /Applications | Gets the list of applications created in the Service Fabric cluster that match the specified filters.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationLoadInfo**](docs/ApplicationApi.md#getApplicationLoadInfo) | **GET** /Applications/{applicationId}/$/GetLoadInformation | Gets load information about a Service Fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**getApplicationUpgrade**](docs/ApplicationApi.md#getApplicationUpgrade) | **GET** /Applications/{applicationId}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this application.
*ServiceFabricClientApis.ApplicationApi* | [**getDeployedApplicationHealth**](docs/ApplicationApi.md#getDeployedApplicationHealth) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node.
*ServiceFabricClientApis.ApplicationApi* | [**getDeployedApplicationHealthUsingPolicy**](docs/ApplicationApi.md#getDeployedApplicationHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node. using the specified policy.
*ServiceFabricClientApis.ApplicationApi* | [**getDeployedApplicationInfo**](docs/ApplicationApi.md#getDeployedApplicationInfo) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId} | Gets the information about an application deployed on a Service Fabric node.
*ServiceFabricClientApis.ApplicationApi* | [**getDeployedApplicationInfoList**](docs/ApplicationApi.md#getDeployedApplicationInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications | Gets the list of applications deployed on a Service Fabric node.
*ServiceFabricClientApis.ApplicationApi* | [**reportApplicationHealth**](docs/ApplicationApi.md#reportApplicationHealth) | **POST** /Applications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application.
*ServiceFabricClientApis.ApplicationApi* | [**reportDeployedApplicationHealth**](docs/ApplicationApi.md#reportDeployedApplicationHealth) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application deployed on a Service Fabric node.
*ServiceFabricClientApis.ApplicationApi* | [**resumeApplicationUpgrade**](docs/ApplicationApi.md#resumeApplicationUpgrade) | **POST** /Applications/{applicationId}/$/MoveToNextUpgradeDomain | Resumes upgrading an application in the Service Fabric cluster.
*ServiceFabricClientApis.ApplicationApi* | [**rollbackApplicationUpgrade**](docs/ApplicationApi.md#rollbackApplicationUpgrade) | **POST** /Applications/{applicationId}/$/RollbackUpgrade | Starts rolling back the currently on-going upgrade of an application in the Service Fabric cluster.
*ServiceFabricClientApis.ApplicationApi* | [**startApplicationUpgrade**](docs/ApplicationApi.md#startApplicationUpgrade) | **POST** /Applications/{applicationId}/$/Upgrade | Starts upgrading an application in the Service Fabric cluster.
*ServiceFabricClientApis.ApplicationApi* | [**updateApplicationUpgrade**](docs/ApplicationApi.md#updateApplicationUpgrade) | **POST** /Applications/{applicationId}/$/UpdateUpgrade | Updates an ongoing application upgrade in the Service Fabric cluster.
*ServiceFabricClientApis.ApplicationTypeApi* | [**getApplicationManifest**](docs/ApplicationTypeApi.md#getApplicationManifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetApplicationManifest | Gets the manifest describing an application type.
*ServiceFabricClientApis.ApplicationTypeApi* | [**getApplicationTypeInfoList**](docs/ApplicationTypeApi.md#getApplicationTypeInfoList) | **GET** /ApplicationTypes | Gets the list of application types in the Service Fabric cluster.
*ServiceFabricClientApis.ApplicationTypeApi* | [**getApplicationTypeInfoListByName**](docs/ApplicationTypeApi.md#getApplicationTypeInfoListByName) | **GET** /ApplicationTypes/{applicationTypeName} | Gets the list of application types in the Service Fabric cluster matching exactly the specified name.
*ServiceFabricClientApis.ApplicationTypeApi* | [**provisionApplicationType**](docs/ApplicationTypeApi.md#provisionApplicationType) | **POST** /ApplicationTypes/$/Provision | Provisions or registers a Service Fabric application type with the cluster using the &#39;.sfpkg&#39; package in the external store or using the application package in the image store.
*ServiceFabricClientApis.ApplicationTypeApi* | [**unprovisionApplicationType**](docs/ApplicationTypeApi.md#unprovisionApplicationType) | **POST** /ApplicationTypes/{applicationTypeName}/$/Unprovision | Removes or unregisters a Service Fabric application type from the cluster.
*ServiceFabricClientApis.BackupRestoreApi* | [**backupPartition**](docs/BackupRestoreApi.md#backupPartition) | **POST** /Partitions/{partitionId}/$/Backup | Triggers backup of the partition&#39;s state.
*ServiceFabricClientApis.BackupRestoreApi* | [**createBackupPolicy**](docs/BackupRestoreApi.md#createBackupPolicy) | **POST** /BackupRestore/BackupPolicies/$/Create | Creates a backup policy.
*ServiceFabricClientApis.BackupRestoreApi* | [**deleteBackupPolicy**](docs/BackupRestoreApi.md#deleteBackupPolicy) | **POST** /BackupRestore/BackupPolicies/{backupPolicyName}/$/Delete | Deletes the backup policy.
*ServiceFabricClientApis.BackupRestoreApi* | [**disableApplicationBackup**](docs/BackupRestoreApi.md#disableApplicationBackup) | **POST** /Applications/{applicationId}/$/DisableBackup | Disables periodic backup of Service Fabric application.
*ServiceFabricClientApis.BackupRestoreApi* | [**disablePartitionBackup**](docs/BackupRestoreApi.md#disablePartitionBackup) | **POST** /Partitions/{partitionId}/$/DisableBackup | Disables periodic backup of Service Fabric partition which was previously enabled.
*ServiceFabricClientApis.BackupRestoreApi* | [**disableServiceBackup**](docs/BackupRestoreApi.md#disableServiceBackup) | **POST** /Services/{serviceId}/$/DisableBackup | Disables periodic backup of Service Fabric service which was previously enabled.
*ServiceFabricClientApis.BackupRestoreApi* | [**enableApplicationBackup**](docs/BackupRestoreApi.md#enableApplicationBackup) | **POST** /Applications/{applicationId}/$/EnableBackup | Enables periodic backup of stateful partitions under this Service Fabric application.
*ServiceFabricClientApis.BackupRestoreApi* | [**enablePartitionBackup**](docs/BackupRestoreApi.md#enablePartitionBackup) | **POST** /Partitions/{partitionId}/$/EnableBackup | Enables periodic backup of the stateful persisted partition.
*ServiceFabricClientApis.BackupRestoreApi* | [**enableServiceBackup**](docs/BackupRestoreApi.md#enableServiceBackup) | **POST** /Services/{serviceId}/$/EnableBackup | Enables periodic backup of stateful partitions under this Service Fabric service.
*ServiceFabricClientApis.BackupRestoreApi* | [**getAllEntitiesBackedUpByPolicy**](docs/BackupRestoreApi.md#getAllEntitiesBackedUpByPolicy) | **GET** /BackupRestore/BackupPolicies/{backupPolicyName}/$/GetBackupEnabledEntities | Gets the list of backup entities that are associated with this policy.
*ServiceFabricClientApis.BackupRestoreApi* | [**getApplicationBackupConfigurationInfo**](docs/BackupRestoreApi.md#getApplicationBackupConfigurationInfo) | **GET** /Applications/{applicationId}/$/GetBackupConfigurationInfo | Gets the Service Fabric application backup configuration information.
*ServiceFabricClientApis.BackupRestoreApi* | [**getApplicationBackupList**](docs/BackupRestoreApi.md#getApplicationBackupList) | **GET** /Applications/{applicationId}/$/GetBackups | Gets the list of backups available for every partition in this application.
*ServiceFabricClientApis.BackupRestoreApi* | [**getBackupPolicyByName**](docs/BackupRestoreApi.md#getBackupPolicyByName) | **GET** /BackupRestore/BackupPolicies/{backupPolicyName} | Gets a particular backup policy by name.
*ServiceFabricClientApis.BackupRestoreApi* | [**getBackupPolicyList**](docs/BackupRestoreApi.md#getBackupPolicyList) | **GET** /BackupRestore/BackupPolicies | Gets all the backup policies configured.
*ServiceFabricClientApis.BackupRestoreApi* | [**getBackupsFromBackupLocation**](docs/BackupRestoreApi.md#getBackupsFromBackupLocation) | **POST** /BackupRestore/$/GetBackups | Gets the list of backups available for the specified backed up entity at the specified backup location.
*ServiceFabricClientApis.BackupRestoreApi* | [**getPartitionBackupConfigurationInfo**](docs/BackupRestoreApi.md#getPartitionBackupConfigurationInfo) | **GET** /Partitions/{partitionId}/$/GetBackupConfigurationInfo | Gets the partition backup configuration information
*ServiceFabricClientApis.BackupRestoreApi* | [**getPartitionBackupList**](docs/BackupRestoreApi.md#getPartitionBackupList) | **GET** /Partitions/{partitionId}/$/GetBackups | Gets the list of backups available for the specified partition.
*ServiceFabricClientApis.BackupRestoreApi* | [**getPartitionBackupProgress**](docs/BackupRestoreApi.md#getPartitionBackupProgress) | **GET** /Partitions/{partitionId}/$/GetBackupProgress | Gets details for the latest backup triggered for this partition.
*ServiceFabricClientApis.BackupRestoreApi* | [**getPartitionRestoreProgress**](docs/BackupRestoreApi.md#getPartitionRestoreProgress) | **GET** /Partitions/{partitionId}/$/GetRestoreProgress | Gets details for the latest restore operation triggered for this partition.
*ServiceFabricClientApis.BackupRestoreApi* | [**getServiceBackupConfigurationInfo**](docs/BackupRestoreApi.md#getServiceBackupConfigurationInfo) | **GET** /Services/{serviceId}/$/GetBackupConfigurationInfo | Gets the Service Fabric service backup configuration information.
*ServiceFabricClientApis.BackupRestoreApi* | [**getServiceBackupList**](docs/BackupRestoreApi.md#getServiceBackupList) | **GET** /Services/{serviceId}/$/GetBackups | Gets the list of backups available for every partition in this service.
*ServiceFabricClientApis.BackupRestoreApi* | [**restorePartition**](docs/BackupRestoreApi.md#restorePartition) | **POST** /Partitions/{partitionId}/$/Restore | Triggers restore of the state of the partition using the specified restore partition description.
*ServiceFabricClientApis.BackupRestoreApi* | [**resumeApplicationBackup**](docs/BackupRestoreApi.md#resumeApplicationBackup) | **POST** /Applications/{applicationId}/$/ResumeBackup | Resumes periodic backup of a Service Fabric application which was previously suspended.
*ServiceFabricClientApis.BackupRestoreApi* | [**resumePartitionBackup**](docs/BackupRestoreApi.md#resumePartitionBackup) | **POST** /Partitions/{partitionId}/$/ResumeBackup | Resumes periodic backup of partition which was previously suspended.
*ServiceFabricClientApis.BackupRestoreApi* | [**resumeServiceBackup**](docs/BackupRestoreApi.md#resumeServiceBackup) | **POST** /Services/{serviceId}/$/ResumeBackup | Resumes periodic backup of a Service Fabric service which was previously suspended.
*ServiceFabricClientApis.BackupRestoreApi* | [**suspendApplicationBackup**](docs/BackupRestoreApi.md#suspendApplicationBackup) | **POST** /Applications/{applicationId}/$/SuspendBackup | Suspends periodic backup for the specified Service Fabric application.
*ServiceFabricClientApis.BackupRestoreApi* | [**suspendPartitionBackup**](docs/BackupRestoreApi.md#suspendPartitionBackup) | **POST** /Partitions/{partitionId}/$/SuspendBackup | Suspends periodic backup for the specified partition.
*ServiceFabricClientApis.BackupRestoreApi* | [**suspendServiceBackup**](docs/BackupRestoreApi.md#suspendServiceBackup) | **POST** /Services/{serviceId}/$/SuspendBackup | Suspends periodic backup for the specified Service Fabric service.
*ServiceFabricClientApis.BackupRestoreApi* | [**updateBackupPolicy**](docs/BackupRestoreApi.md#updateBackupPolicy) | **POST** /BackupRestore/BackupPolicies/{backupPolicyName}/$/Update | Updates the backup policy.
*ServiceFabricClientApis.ChaosApi* | [**getChaos**](docs/ChaosApi.md#getChaos) | **GET** /Tools/Chaos | Get the status of Chaos.
*ServiceFabricClientApis.ChaosApi* | [**getChaosEvents**](docs/ChaosApi.md#getChaosEvents) | **GET** /Tools/Chaos/Events | Gets the next segment of the Chaos events based on the continuation token or the time range.
*ServiceFabricClientApis.ChaosApi* | [**getChaosSchedule**](docs/ChaosApi.md#getChaosSchedule) | **GET** /Tools/Chaos/Schedule | Get the Chaos Schedule defining when and how to run Chaos.
*ServiceFabricClientApis.ChaosApi* | [**postChaosSchedule**](docs/ChaosApi.md#postChaosSchedule) | **POST** /Tools/Chaos/Schedule | Set the schedule used by Chaos.
*ServiceFabricClientApis.ChaosApi* | [**startChaos**](docs/ChaosApi.md#startChaos) | **POST** /Tools/Chaos/$/Start | Starts Chaos in the cluster.
*ServiceFabricClientApis.ChaosApi* | [**stopChaos**](docs/ChaosApi.md#stopChaos) | **POST** /Tools/Chaos/$/Stop | Stops Chaos if it is running in the cluster and put the Chaos Schedule in a stopped state.
*ServiceFabricClientApis.ClusterApi* | [**getAadMetadata**](docs/ClusterApi.md#getAadMetadata) | **GET** /$/GetAadMetadata | Gets the Azure Active Directory metadata used for secured connection to cluster.
*ServiceFabricClientApis.ClusterApi* | [**getClusterConfiguration**](docs/ClusterApi.md#getClusterConfiguration) | **GET** /$/GetClusterConfiguration | Get the Service Fabric standalone cluster configuration.
*ServiceFabricClientApis.ClusterApi* | [**getClusterConfigurationUpgradeStatus**](docs/ClusterApi.md#getClusterConfigurationUpgradeStatus) | **GET** /$/GetClusterConfigurationUpgradeStatus | Get the cluster configuration upgrade status of a Service Fabric standalone cluster.
*ServiceFabricClientApis.ClusterApi* | [**getClusterHealth**](docs/ClusterApi.md#getClusterHealth) | **GET** /$/GetClusterHealth | Gets the health of a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**getClusterHealthChunk**](docs/ClusterApi.md#getClusterHealthChunk) | **GET** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ServiceFabricClientApis.ClusterApi* | [**getClusterHealthChunkUsingPolicyAndAdvancedFilters**](docs/ClusterApi.md#getClusterHealthChunkUsingPolicyAndAdvancedFilters) | **POST** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ServiceFabricClientApis.ClusterApi* | [**getClusterHealthUsingPolicy**](docs/ClusterApi.md#getClusterHealthUsingPolicy) | **POST** /$/GetClusterHealth | Gets the health of a Service Fabric cluster using the specified policy.
*ServiceFabricClientApis.ClusterApi* | [**getClusterManifest**](docs/ClusterApi.md#getClusterManifest) | **GET** /$/GetClusterManifest | Get the Service Fabric cluster manifest.
*ServiceFabricClientApis.ClusterApi* | [**getClusterUpgradeProgress**](docs/ClusterApi.md#getClusterUpgradeProgress) | **GET** /$/GetUpgradeProgress | Gets the progress of the current cluster upgrade.
*ServiceFabricClientApis.ClusterApi* | [**getProvisionedFabricCodeVersionInfoList**](docs/ClusterApi.md#getProvisionedFabricCodeVersionInfoList) | **GET** /$/GetProvisionedCodeVersions | Gets a list of fabric code versions that are provisioned in a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**getProvisionedFabricConfigVersionInfoList**](docs/ClusterApi.md#getProvisionedFabricConfigVersionInfoList) | **GET** /$/GetProvisionedConfigVersions | Gets a list of fabric config versions that are provisioned in a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**getUpgradeOrchestrationServiceState**](docs/ClusterApi.md#getUpgradeOrchestrationServiceState) | **GET** /$/GetUpgradeOrchestrationServiceState | Get the service state of Service Fabric Upgrade Orchestration Service.
*ServiceFabricClientApis.ClusterApi* | [**provisionCluster**](docs/ClusterApi.md#provisionCluster) | **POST** /$/Provision | Provision the code or configuration packages of a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**reportClusterHealth**](docs/ClusterApi.md#reportClusterHealth) | **POST** /$/ReportClusterHealth | Sends a health report on the Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**resumeClusterUpgrade**](docs/ClusterApi.md#resumeClusterUpgrade) | **POST** /$/MoveToNextUpgradeDomain | Make the cluster upgrade move on to the next upgrade domain.
*ServiceFabricClientApis.ClusterApi* | [**rollbackClusterUpgrade**](docs/ClusterApi.md#rollbackClusterUpgrade) | **POST** /$/RollbackUpgrade | Rollback the upgrade of a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**setUpgradeOrchestrationServiceState**](docs/ClusterApi.md#setUpgradeOrchestrationServiceState) | **POST** /$/SetUpgradeOrchestrationServiceState | Update the service state of Service Fabric Upgrade Orchestration Service.
*ServiceFabricClientApis.ClusterApi* | [**startClusterConfigurationUpgrade**](docs/ClusterApi.md#startClusterConfigurationUpgrade) | **POST** /$/StartClusterConfigurationUpgrade | Start upgrading the configuration of a Service Fabric standalone cluster.
*ServiceFabricClientApis.ClusterApi* | [**startClusterUpgrade**](docs/ClusterApi.md#startClusterUpgrade) | **POST** /$/Upgrade | Start upgrading the code or configuration version of a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**unprovisionCluster**](docs/ClusterApi.md#unprovisionCluster) | **POST** /$/Unprovision | Unprovision the code or configuration packages of a Service Fabric cluster.
*ServiceFabricClientApis.ClusterApi* | [**updateClusterUpgrade**](docs/ClusterApi.md#updateClusterUpgrade) | **POST** /$/UpdateUpgrade | Update the upgrade parameters of a Service Fabric cluster upgrade.
*ServiceFabricClientApis.CodePackageApi* | [**getContainerLogsDeployedOnNode**](docs/CodePackageApi.md#getContainerLogsDeployedOnNode) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/ContainerLogs | Gets the container logs for container deployed on a Service Fabric node.
*ServiceFabricClientApis.CodePackageApi* | [**getDeployedCodePackageInfoList**](docs/CodePackageApi.md#getDeployedCodePackageInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages | Gets the list of code packages deployed on a Service Fabric node.
*ServiceFabricClientApis.CodePackageApi* | [**invokeContainerApi**](docs/CodePackageApi.md#invokeContainerApi) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/ContainerApi | Invoke container API on a container deployed on a Service Fabric node.
*ServiceFabricClientApis.CodePackageApi* | [**restartDeployedCodePackage**](docs/CodePackageApi.md#restartDeployedCodePackage) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/Restart | Restarts a code package deployed on a Service Fabric node in a cluster.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**createComposeDeployment**](docs/ComposeDeploymentApi.md#createComposeDeployment) | **PUT** /ComposeDeployments/$/Create | Creates a Service Fabric compose deployment.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**getComposeDeploymentStatus**](docs/ComposeDeploymentApi.md#getComposeDeploymentStatus) | **GET** /ComposeDeployments/{deploymentName} | Gets information about a Service Fabric compose deployment.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**getComposeDeploymentStatusList**](docs/ComposeDeploymentApi.md#getComposeDeploymentStatusList) | **GET** /ComposeDeployments | Gets the list of compose deployments created in the Service Fabric cluster.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**getComposeDeploymentUpgradeProgress**](docs/ComposeDeploymentApi.md#getComposeDeploymentUpgradeProgress) | **GET** /ComposeDeployments/{deploymentName}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this Service Fabric compose deployment.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**removeComposeDeployment**](docs/ComposeDeploymentApi.md#removeComposeDeployment) | **POST** /ComposeDeployments/{deploymentName}/$/Delete | Deletes an existing Service Fabric compose deployment from cluster.
*ServiceFabricClientApis.ComposeDeploymentApi* | [**startComposeDeploymentUpgrade**](docs/ComposeDeploymentApi.md#startComposeDeploymentUpgrade) | **POST** /ComposeDeployments/{deploymentName}/$/Upgrade | Starts upgrading a compose deployment in the Service Fabric cluster.
*ServiceFabricClientApis.EventsStoreApi* | [**getApplicationEventList**](docs/EventsStoreApi.md#getApplicationEventList) | **GET** /EventsStore/Applications/{applicationId}/$/Events | Gets an Application-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getApplicationsEventList**](docs/EventsStoreApi.md#getApplicationsEventList) | **GET** /EventsStore/Applications/Events | Gets all Applications-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getClusterEventList**](docs/EventsStoreApi.md#getClusterEventList) | **GET** /EventsStore/Cluster/Events | Gets all Cluster-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getContainersEventList**](docs/EventsStoreApi.md#getContainersEventList) | **GET** /EventsStore/Containers/Events | Gets all Containers-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getCorrelatedEventList**](docs/EventsStoreApi.md#getCorrelatedEventList) | **GET** /EventsStore/CorrelatedEvents/{eventInstanceId}/$/Events | Gets all correlated events for a given event.
*ServiceFabricClientApis.EventsStoreApi* | [**getNodeEventList**](docs/EventsStoreApi.md#getNodeEventList) | **GET** /EventsStore/Nodes/{nodeName}/$/Events | Gets a Node-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getNodesEventList**](docs/EventsStoreApi.md#getNodesEventList) | **GET** /EventsStore/Nodes/Events | Gets all Nodes-related Events.
*ServiceFabricClientApis.EventsStoreApi* | [**getPartitionEventList**](docs/EventsStoreApi.md#getPartitionEventList) | **GET** /EventsStore/Partitions/{partitionId}/$/Events | Gets a Partition-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getPartitionReplicaEventList**](docs/EventsStoreApi.md#getPartitionReplicaEventList) | **GET** /EventsStore/Partitions/{partitionId}/$/Replicas/{replicaId}/$/Events | Gets a Partition Replica-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getPartitionReplicasEventList**](docs/EventsStoreApi.md#getPartitionReplicasEventList) | **GET** /EventsStore/Partitions/{partitionId}/$/Replicas/Events | Gets all Replicas-related events for a Partition.
*ServiceFabricClientApis.EventsStoreApi* | [**getPartitionsEventList**](docs/EventsStoreApi.md#getPartitionsEventList) | **GET** /EventsStore/Partitions/Events | Gets all Partitions-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getServiceEventList**](docs/EventsStoreApi.md#getServiceEventList) | **GET** /EventsStore/Services/{serviceId}/$/Events | Gets a Service-related events.
*ServiceFabricClientApis.EventsStoreApi* | [**getServicesEventList**](docs/EventsStoreApi.md#getServicesEventList) | **GET** /EventsStore/Services/Events | Gets all Services-related events.
*ServiceFabricClientApis.FaultsApi* | [**cancelOperation**](docs/FaultsApi.md#cancelOperation) | **POST** /Faults/$/Cancel | Cancels a user-induced fault operation.
*ServiceFabricClientApis.FaultsApi* | [**getDataLossProgress**](docs/FaultsApi.md#getDataLossProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetDataLossProgress | Gets the progress of a partition data loss operation started using the StartDataLoss API.
*ServiceFabricClientApis.FaultsApi* | [**getFaultOperationList**](docs/FaultsApi.md#getFaultOperationList) | **GET** /Faults/ | Gets a list of user-induced fault operations filtered by provided input.
*ServiceFabricClientApis.FaultsApi* | [**getNodeTransitionProgress**](docs/FaultsApi.md#getNodeTransitionProgress) | **GET** /Faults/Nodes/{nodeName}/$/GetTransitionProgress | Gets the progress of an operation started using StartNodeTransition.
*ServiceFabricClientApis.FaultsApi* | [**getPartitionRestartProgress**](docs/FaultsApi.md#getPartitionRestartProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetRestartProgress | Gets the progress of a PartitionRestart operation started using StartPartitionRestart.
*ServiceFabricClientApis.FaultsApi* | [**getQuorumLossProgress**](docs/FaultsApi.md#getQuorumLossProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetQuorumLossProgress | Gets the progress of a quorum loss operation on a partition started using the StartQuorumLoss API.
*ServiceFabricClientApis.FaultsApi* | [**startDataLoss**](docs/FaultsApi.md#startDataLoss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartDataLoss | This API will induce data loss for the specified partition. It will trigger a call to the OnDataLossAsync API of the partition.
*ServiceFabricClientApis.FaultsApi* | [**startNodeTransition**](docs/FaultsApi.md#startNodeTransition) | **POST** /Faults/Nodes/{nodeName}/$/StartTransition/ | Starts or stops a cluster node.
*ServiceFabricClientApis.FaultsApi* | [**startPartitionRestart**](docs/FaultsApi.md#startPartitionRestart) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartRestart | This API will restart some or all replicas or instances of the specified partition.
*ServiceFabricClientApis.FaultsApi* | [**startQuorumLoss**](docs/FaultsApi.md#startQuorumLoss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartQuorumLoss | Induces quorum loss for a given stateful service partition.
*ServiceFabricClientApis.ImageStoreApi* | [**commitImageStoreUploadSession**](docs/ImageStoreApi.md#commitImageStoreUploadSession) | **POST** /ImageStore/$/CommitUploadSession | Commit an image store upload session.
*ServiceFabricClientApis.ImageStoreApi* | [**copyImageStoreContent**](docs/ImageStoreApi.md#copyImageStoreContent) | **POST** /ImageStore/$/Copy | Copies image store content internally
*ServiceFabricClientApis.ImageStoreApi* | [**deleteImageStoreContent**](docs/ImageStoreApi.md#deleteImageStoreContent) | **DELETE** /ImageStore/{contentPath} | Deletes existing image store content.
*ServiceFabricClientApis.ImageStoreApi* | [**deleteImageStoreUploadSession**](docs/ImageStoreApi.md#deleteImageStoreUploadSession) | **DELETE** /ImageStore/$/DeleteUploadSession | Cancels an image store upload session.
*ServiceFabricClientApis.ImageStoreApi* | [**getImageStoreContent**](docs/ImageStoreApi.md#getImageStoreContent) | **GET** /ImageStore/{contentPath} | Gets the image store content information.
*ServiceFabricClientApis.ImageStoreApi* | [**getImageStoreRootContent**](docs/ImageStoreApi.md#getImageStoreRootContent) | **GET** /ImageStore | Gets the content information at the root of the image store.
*ServiceFabricClientApis.ImageStoreApi* | [**getImageStoreUploadSessionById**](docs/ImageStoreApi.md#getImageStoreUploadSessionById) | **GET** /ImageStore/$/GetUploadSession | Get the image store upload session by ID.
*ServiceFabricClientApis.ImageStoreApi* | [**getImageStoreUploadSessionByPath**](docs/ImageStoreApi.md#getImageStoreUploadSessionByPath) | **GET** /ImageStore/{contentPath}/$/GetUploadSession | Get the image store upload session by relative path.
*ServiceFabricClientApis.ImageStoreApi* | [**uploadFile**](docs/ImageStoreApi.md#uploadFile) | **PUT** /ImageStore/{contentPath} | Uploads contents of the file to the image store.
*ServiceFabricClientApis.ImageStoreApi* | [**uploadFileChunk**](docs/ImageStoreApi.md#uploadFileChunk) | **PUT** /ImageStore/{contentPath}/$/UploadChunk | Uploads a file chunk to the image store relative path.
*ServiceFabricClientApis.InfrastructureApi* | [**invokeInfrastructureCommand**](docs/InfrastructureApi.md#invokeInfrastructureCommand) | **POST** /$/InvokeInfrastructureCommand | Invokes an administrative command on the given Infrastructure Service instance.
*ServiceFabricClientApis.InfrastructureApi* | [**invokeInfrastructureQuery**](docs/InfrastructureApi.md#invokeInfrastructureQuery) | **GET** /$/InvokeInfrastructureQuery | Invokes a read-only query on the given infrastructure service instance.
*ServiceFabricClientApis.NodeApi* | [**disableNode**](docs/NodeApi.md#disableNode) | **POST** /Nodes/{nodeName}/$/Deactivate | Deactivate a Service Fabric cluster node with the specified deactivation intent.
*ServiceFabricClientApis.NodeApi* | [**enableNode**](docs/NodeApi.md#enableNode) | **POST** /Nodes/{nodeName}/$/Activate | Activate a Service Fabric cluster node which is currently deactivated.
*ServiceFabricClientApis.NodeApi* | [**getNodeHealth**](docs/NodeApi.md#getNodeHealth) | **GET** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node.
*ServiceFabricClientApis.NodeApi* | [**getNodeHealthUsingPolicy**](docs/NodeApi.md#getNodeHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node, by using the specified health policy.
*ServiceFabricClientApis.NodeApi* | [**getNodeInfo**](docs/NodeApi.md#getNodeInfo) | **GET** /Nodes/{nodeName} | Gets the information about a specific node in the Service Fabric cluster.
*ServiceFabricClientApis.NodeApi* | [**getNodeInfoList**](docs/NodeApi.md#getNodeInfoList) | **GET** /Nodes | Gets the list of nodes in the Service Fabric cluster.
*ServiceFabricClientApis.NodeApi* | [**getNodeLoadInfo**](docs/NodeApi.md#getNodeLoadInfo) | **GET** /Nodes/{nodeName}/$/GetLoadInformation | Gets the load information of a Service Fabric node.
*ServiceFabricClientApis.NodeApi* | [**removeNodeState**](docs/NodeApi.md#removeNodeState) | **POST** /Nodes/{nodeName}/$/RemoveNodeState | Notifies Service Fabric that the persisted state on a node has been permanently removed or lost.
*ServiceFabricClientApis.NodeApi* | [**reportNodeHealth**](docs/NodeApi.md#reportNodeHealth) | **POST** /Nodes/{nodeName}/$/ReportHealth | Sends a health report on the Service Fabric node.
*ServiceFabricClientApis.NodeApi* | [**restartNode**](docs/NodeApi.md#restartNode) | **POST** /Nodes/{nodeName}/$/Restart | Restarts a Service Fabric cluster node.
*ServiceFabricClientApis.PartitionApi* | [**getPartitionHealth**](docs/PartitionApi.md#getPartitionHealth) | **GET** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition.
*ServiceFabricClientApis.PartitionApi* | [**getPartitionHealthUsingPolicy**](docs/PartitionApi.md#getPartitionHealthUsingPolicy) | **POST** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition, by using the specified health policy.
*ServiceFabricClientApis.PartitionApi* | [**getPartitionInfo**](docs/PartitionApi.md#getPartitionInfo) | **GET** /Partitions/{partitionId} | Gets the information about a Service Fabric partition.
*ServiceFabricClientApis.PartitionApi* | [**getPartitionInfoList**](docs/PartitionApi.md#getPartitionInfoList) | **GET** /Services/{serviceId}/$/GetPartitions | Gets the list of partitions of a Service Fabric service.
*ServiceFabricClientApis.PartitionApi* | [**getPartitionLoadInformation**](docs/PartitionApi.md#getPartitionLoadInformation) | **GET** /Partitions/{partitionId}/$/GetLoadInformation | Gets the load information of the specified Service Fabric partition.
*ServiceFabricClientApis.PartitionApi* | [**getServiceNameInfo**](docs/PartitionApi.md#getServiceNameInfo) | **GET** /Partitions/{partitionId}/$/GetServiceName | Gets the name of the Service Fabric service for a partition.
*ServiceFabricClientApis.PartitionApi* | [**recoverAllPartitions**](docs/PartitionApi.md#recoverAllPartitions) | **POST** /$/RecoverAllPartitions | Indicates to the Service Fabric cluster that it should attempt to recover any services (including system services) which are currently stuck in quorum loss.
*ServiceFabricClientApis.PartitionApi* | [**recoverPartition**](docs/PartitionApi.md#recoverPartition) | **POST** /Partitions/{partitionId}/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover a specific partition which is currently stuck in quorum loss.
*ServiceFabricClientApis.PartitionApi* | [**recoverServicePartitions**](docs/PartitionApi.md#recoverServicePartitions) | **POST** /Services/$/{serviceId}/$/GetPartitions/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover the specified service which is currently stuck in quorum loss.
*ServiceFabricClientApis.PartitionApi* | [**recoverSystemPartitions**](docs/PartitionApi.md#recoverSystemPartitions) | **POST** /$/RecoverSystemPartitions | Indicates to the Service Fabric cluster that it should attempt to recover the system services which are currently stuck in quorum loss.
*ServiceFabricClientApis.PartitionApi* | [**reportPartitionHealth**](docs/PartitionApi.md#reportPartitionHealth) | **POST** /Partitions/{partitionId}/$/ReportHealth | Sends a health report on the Service Fabric partition.
*ServiceFabricClientApis.PartitionApi* | [**resetPartitionLoad**](docs/PartitionApi.md#resetPartitionLoad) | **POST** /Partitions/{partitionId}/$/ResetLoad | Resets the current load of a Service Fabric partition.
*ServiceFabricClientApis.PropertyManagementApi* | [**createName**](docs/PropertyManagementApi.md#createName) | **POST** /Names/$/Create | Creates a Service Fabric name.
*ServiceFabricClientApis.PropertyManagementApi* | [**deleteName**](docs/PropertyManagementApi.md#deleteName) | **DELETE** /Names/{nameId} | Deletes a Service Fabric name.
*ServiceFabricClientApis.PropertyManagementApi* | [**deleteProperty**](docs/PropertyManagementApi.md#deleteProperty) | **DELETE** /Names/{nameId}/$/GetProperty | Deletes the specified Service Fabric property.
*ServiceFabricClientApis.PropertyManagementApi* | [**getNameExistsInfo**](docs/PropertyManagementApi.md#getNameExistsInfo) | **GET** /Names/{nameId} | Returns whether the Service Fabric name exists.
*ServiceFabricClientApis.PropertyManagementApi* | [**getPropertyInfo**](docs/PropertyManagementApi.md#getPropertyInfo) | **GET** /Names/{nameId}/$/GetProperty | Gets the specified Service Fabric property.
*ServiceFabricClientApis.PropertyManagementApi* | [**getPropertyInfoList**](docs/PropertyManagementApi.md#getPropertyInfoList) | **GET** /Names/{nameId}/$/GetProperties | Gets information on all Service Fabric properties under a given name.
*ServiceFabricClientApis.PropertyManagementApi* | [**getSubNameInfoList**](docs/PropertyManagementApi.md#getSubNameInfoList) | **GET** /Names/{nameId}/$/GetSubNames | Enumerates all the Service Fabric names under a given name.
*ServiceFabricClientApis.PropertyManagementApi* | [**putProperty**](docs/PropertyManagementApi.md#putProperty) | **PUT** /Names/{nameId}/$/GetProperty | Creates or updates a Service Fabric property.
*ServiceFabricClientApis.PropertyManagementApi* | [**submitPropertyBatch**](docs/PropertyManagementApi.md#submitPropertyBatch) | **POST** /Names/{nameId}/$/GetProperties/$/SubmitBatch | Submits a property batch.
*ServiceFabricClientApis.RepairManagementApi* | [**cancelRepairTask**](docs/RepairManagementApi.md#cancelRepairTask) | **POST** /$/CancelRepairTask | Requests the cancellation of the given repair task.
*ServiceFabricClientApis.RepairManagementApi* | [**createRepairTask**](docs/RepairManagementApi.md#createRepairTask) | **POST** /$/CreateRepairTask | Creates a new repair task.
*ServiceFabricClientApis.RepairManagementApi* | [**deleteRepairTask**](docs/RepairManagementApi.md#deleteRepairTask) | **POST** /$/DeleteRepairTask | Deletes a completed repair task.
*ServiceFabricClientApis.RepairManagementApi* | [**forceApproveRepairTask**](docs/RepairManagementApi.md#forceApproveRepairTask) | **POST** /$/ForceApproveRepairTask | Forces the approval of the given repair task.
*ServiceFabricClientApis.RepairManagementApi* | [**getRepairTaskList**](docs/RepairManagementApi.md#getRepairTaskList) | **GET** /$/GetRepairTaskList | Gets a list of repair tasks matching the given filters.
*ServiceFabricClientApis.RepairManagementApi* | [**updateRepairExecutionState**](docs/RepairManagementApi.md#updateRepairExecutionState) | **POST** /$/UpdateRepairExecutionState | Updates the execution state of a repair task.
*ServiceFabricClientApis.RepairManagementApi* | [**updateRepairTaskHealthPolicy**](docs/RepairManagementApi.md#updateRepairTaskHealthPolicy) | **POST** /$/UpdateRepairTaskHealthPolicy | Updates the health policy of the given repair task.
*ServiceFabricClientApis.ReplicaApi* | [**getDeployedServiceReplicaDetailInfo**](docs/ReplicaApi.md#getDeployedServiceReplicaDetailInfo) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetDetail | Gets the details of replica deployed on a Service Fabric node.
*ServiceFabricClientApis.ReplicaApi* | [**getDeployedServiceReplicaDetailInfoByPartitionId**](docs/ReplicaApi.md#getDeployedServiceReplicaDetailInfoByPartitionId) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas | Gets the details of replica deployed on a Service Fabric node.
*ServiceFabricClientApis.ReplicaApi* | [**getDeployedServiceReplicaInfoList**](docs/ReplicaApi.md#getDeployedServiceReplicaInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetReplicas | Gets the list of replicas deployed on a Service Fabric node.
*ServiceFabricClientApis.ReplicaApi* | [**getReplicaHealth**](docs/ReplicaApi.md#getReplicaHealth) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance.
*ServiceFabricClientApis.ReplicaApi* | [**getReplicaHealthUsingPolicy**](docs/ReplicaApi.md#getReplicaHealthUsingPolicy) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance using the specified policy.
*ServiceFabricClientApis.ReplicaApi* | [**getReplicaInfo**](docs/ReplicaApi.md#getReplicaInfo) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId} | Gets the information about a replica of a Service Fabric partition.
*ServiceFabricClientApis.ReplicaApi* | [**getReplicaInfoList**](docs/ReplicaApi.md#getReplicaInfoList) | **GET** /Partitions/{partitionId}/$/GetReplicas | Gets the information about replicas of a Service Fabric service partition.
*ServiceFabricClientApis.ReplicaApi* | [**removeReplica**](docs/ReplicaApi.md#removeReplica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Delete | Removes a service replica running on a node.
*ServiceFabricClientApis.ReplicaApi* | [**reportReplicaHealth**](docs/ReplicaApi.md#reportReplicaHealth) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/ReportHealth | Sends a health report on the Service Fabric replica.
*ServiceFabricClientApis.ReplicaApi* | [**restartReplica**](docs/ReplicaApi.md#restartReplica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Restart | Restarts a service replica of a persisted service running on a node.
*ServiceFabricClientApis.ServiceApi* | [**createService**](docs/ServiceApi.md#createService) | **POST** /Applications/{applicationId}/$/GetServices/$/Create | Creates the specified Service Fabric service.
*ServiceFabricClientApis.ServiceApi* | [**createServiceFromTemplate**](docs/ServiceApi.md#createServiceFromTemplate) | **POST** /Applications/{applicationId}/$/GetServices/$/CreateFromTemplate | Creates a Service Fabric service from the service template.
*ServiceFabricClientApis.ServiceApi* | [**deleteService**](docs/ServiceApi.md#deleteService) | **POST** /Services/{serviceId}/$/Delete | Deletes an existing Service Fabric service.
*ServiceFabricClientApis.ServiceApi* | [**getApplicationNameInfo**](docs/ServiceApi.md#getApplicationNameInfo) | **GET** /Services/{serviceId}/$/GetApplicationName | Gets the name of the Service Fabric application for a service.
*ServiceFabricClientApis.ServiceApi* | [**getServiceDescription**](docs/ServiceApi.md#getServiceDescription) | **GET** /Services/{serviceId}/$/GetDescription | Gets the description of an existing Service Fabric service.
*ServiceFabricClientApis.ServiceApi* | [**getServiceHealth**](docs/ServiceApi.md#getServiceHealth) | **GET** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service.
*ServiceFabricClientApis.ServiceApi* | [**getServiceHealthUsingPolicy**](docs/ServiceApi.md#getServiceHealthUsingPolicy) | **POST** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service, by using the specified health policy.
*ServiceFabricClientApis.ServiceApi* | [**getServiceInfo**](docs/ServiceApi.md#getServiceInfo) | **GET** /Applications/{applicationId}/$/GetServices/{serviceId} | Gets the information about the specific service belonging to the Service Fabric application.
*ServiceFabricClientApis.ServiceApi* | [**getServiceInfoList**](docs/ServiceApi.md#getServiceInfoList) | **GET** /Applications/{applicationId}/$/GetServices | Gets the information about all services belonging to the application specified by the application id.
*ServiceFabricClientApis.ServiceApi* | [**reportServiceHealth**](docs/ServiceApi.md#reportServiceHealth) | **POST** /Services/{serviceId}/$/ReportHealth | Sends a health report on the Service Fabric service.
*ServiceFabricClientApis.ServiceApi* | [**resolveService**](docs/ServiceApi.md#resolveService) | **GET** /Services/{serviceId}/$/ResolvePartition | Resolve a Service Fabric partition.
*ServiceFabricClientApis.ServiceApi* | [**updateService**](docs/ServiceApi.md#updateService) | **POST** /Services/{serviceId}/$/Update | Updates a Service Fabric service using the specified update description.
*ServiceFabricClientApis.ServicePackageApi* | [**deployServicePackageToNode**](docs/ServicePackageApi.md#deployServicePackageToNode) | **POST** /Nodes/{nodeName}/$/DeployServicePackage | Downloads all of the code packages associated with specified service manifest on the specified node.
*ServiceFabricClientApis.ServicePackageApi* | [**getDeployedServicePackageHealth**](docs/ServicePackageApi.md#getDeployedServicePackageHealth) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of an service package for a specific application deployed for a Service Fabric node and application.
*ServiceFabricClientApis.ServicePackageApi* | [**getDeployedServicePackageHealthUsingPolicy**](docs/ServicePackageApi.md#getDeployedServicePackageHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of service package for a specific application deployed on a Service Fabric node using the specified policy.
*ServiceFabricClientApis.ServicePackageApi* | [**getDeployedServicePackageInfoList**](docs/ServicePackageApi.md#getDeployedServicePackageInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages | Gets the list of service packages deployed on a Service Fabric node.
*ServiceFabricClientApis.ServicePackageApi* | [**getDeployedServicePackageInfoListByName**](docs/ServicePackageApi.md#getDeployedServicePackageInfoListByName) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName} | Gets the list of service packages deployed on a Service Fabric node matching exactly the specified name.
*ServiceFabricClientApis.ServicePackageApi* | [**reportDeployedServicePackageHealth**](docs/ServicePackageApi.md#reportDeployedServicePackageHealth) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/ReportHealth | Sends a health report on the Service Fabric deployed service package.
*ServiceFabricClientApis.ServiceTypeApi* | [**getDeployedServiceTypeInfoByName**](docs/ServiceTypeApi.md#getDeployedServiceTypeInfoByName) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes/{serviceTypeName} | Gets the information about a specified service type of the application deployed on a node in a Service Fabric cluster.
*ServiceFabricClientApis.ServiceTypeApi* | [**getDeployedServiceTypeInfoList**](docs/ServiceTypeApi.md#getDeployedServiceTypeInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes | Gets the list containing the information about service types from the applications deployed on a node in a Service Fabric cluster.
*ServiceFabricClientApis.ServiceTypeApi* | [**getServiceManifest**](docs/ServiceTypeApi.md#getServiceManifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceManifest | Gets the manifest describing a service type.
*ServiceFabricClientApis.ServiceTypeApi* | [**getServiceTypeInfoByName**](docs/ServiceTypeApi.md#getServiceTypeInfoByName) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceTypes/{serviceTypeName} | Gets the information about a specific service type that is supported by a provisioned application type in a Service Fabric cluster.
*ServiceFabricClientApis.ServiceTypeApi* | [**getServiceTypeInfoList**](docs/ServiceTypeApi.md#getServiceTypeInfoList) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceTypes | Gets the list containing the information about service types that are supported by a provisioned application type in a Service Fabric cluster.


## Documentation for Models

 - [ServiceFabricClientApis.AadMetadata](docs/AadMetadata.md)
 - [ServiceFabricClientApis.AadMetadataObject](docs/AadMetadataObject.md)
 - [ServiceFabricClientApis.AddRemoveIncrementalNamedPartitionScalingMechanism](docs/AddRemoveIncrementalNamedPartitionScalingMechanism.md)
 - [ServiceFabricClientApis.AnalysisEventMetadata](docs/AnalysisEventMetadata.md)
 - [ServiceFabricClientApis.ApplicationBackupConfigurationInfo](docs/ApplicationBackupConfigurationInfo.md)
 - [ServiceFabricClientApis.ApplicationBackupEntity](docs/ApplicationBackupEntity.md)
 - [ServiceFabricClientApis.ApplicationCapacityDescription](docs/ApplicationCapacityDescription.md)
 - [ServiceFabricClientApis.ApplicationCreatedEvent](docs/ApplicationCreatedEvent.md)
 - [ServiceFabricClientApis.ApplicationDefinitionKind](docs/ApplicationDefinitionKind.md)
 - [ServiceFabricClientApis.ApplicationDeletedEvent](docs/ApplicationDeletedEvent.md)
 - [ServiceFabricClientApis.ApplicationDescription](docs/ApplicationDescription.md)
 - [ServiceFabricClientApis.ApplicationEvent](docs/ApplicationEvent.md)
 - [ServiceFabricClientApis.ApplicationHealth](docs/ApplicationHealth.md)
 - [ServiceFabricClientApis.ApplicationHealthEvaluation](docs/ApplicationHealthEvaluation.md)
 - [ServiceFabricClientApis.ApplicationHealthPolicies](docs/ApplicationHealthPolicies.md)
 - [ServiceFabricClientApis.ApplicationHealthPolicy](docs/ApplicationHealthPolicy.md)
 - [ServiceFabricClientApis.ApplicationHealthPolicyMapItem](docs/ApplicationHealthPolicyMapItem.md)
 - [ServiceFabricClientApis.ApplicationHealthReportCreatedEvent](docs/ApplicationHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.ApplicationHealthReportExpiredEvent](docs/ApplicationHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.ApplicationHealthState](docs/ApplicationHealthState.md)
 - [ServiceFabricClientApis.ApplicationHealthStateChunk](docs/ApplicationHealthStateChunk.md)
 - [ServiceFabricClientApis.ApplicationHealthStateChunkList](docs/ApplicationHealthStateChunkList.md)
 - [ServiceFabricClientApis.ApplicationHealthStateFilter](docs/ApplicationHealthStateFilter.md)
 - [ServiceFabricClientApis.ApplicationInfo](docs/ApplicationInfo.md)
 - [ServiceFabricClientApis.ApplicationLoadInfo](docs/ApplicationLoadInfo.md)
 - [ServiceFabricClientApis.ApplicationMetricDescription](docs/ApplicationMetricDescription.md)
 - [ServiceFabricClientApis.ApplicationNameInfo](docs/ApplicationNameInfo.md)
 - [ServiceFabricClientApis.ApplicationPackageCleanupPolicy](docs/ApplicationPackageCleanupPolicy.md)
 - [ServiceFabricClientApis.ApplicationParameter](docs/ApplicationParameter.md)
 - [ServiceFabricClientApis.ApplicationStatus](docs/ApplicationStatus.md)
 - [ServiceFabricClientApis.ApplicationTypeApplicationsHealthEvaluation](docs/ApplicationTypeApplicationsHealthEvaluation.md)
 - [ServiceFabricClientApis.ApplicationTypeDefinitionKind](docs/ApplicationTypeDefinitionKind.md)
 - [ServiceFabricClientApis.ApplicationTypeHealthPolicyMapItem](docs/ApplicationTypeHealthPolicyMapItem.md)
 - [ServiceFabricClientApis.ApplicationTypeImageStorePath](docs/ApplicationTypeImageStorePath.md)
 - [ServiceFabricClientApis.ApplicationTypeInfo](docs/ApplicationTypeInfo.md)
 - [ServiceFabricClientApis.ApplicationTypeManifest](docs/ApplicationTypeManifest.md)
 - [ServiceFabricClientApis.ApplicationTypeStatus](docs/ApplicationTypeStatus.md)
 - [ServiceFabricClientApis.ApplicationUpgradeCompleteEvent](docs/ApplicationUpgradeCompleteEvent.md)
 - [ServiceFabricClientApis.ApplicationUpgradeDescription](docs/ApplicationUpgradeDescription.md)
 - [ServiceFabricClientApis.ApplicationUpgradeDomainCompleteEvent](docs/ApplicationUpgradeDomainCompleteEvent.md)
 - [ServiceFabricClientApis.ApplicationUpgradeProgressInfo](docs/ApplicationUpgradeProgressInfo.md)
 - [ServiceFabricClientApis.ApplicationUpgradeRollbackCompleteEvent](docs/ApplicationUpgradeRollbackCompleteEvent.md)
 - [ServiceFabricClientApis.ApplicationUpgradeRollbackStartEvent](docs/ApplicationUpgradeRollbackStartEvent.md)
 - [ServiceFabricClientApis.ApplicationUpgradeStartEvent](docs/ApplicationUpgradeStartEvent.md)
 - [ServiceFabricClientApis.ApplicationUpgradeUpdateDescription](docs/ApplicationUpgradeUpdateDescription.md)
 - [ServiceFabricClientApis.ApplicationsHealthEvaluation](docs/ApplicationsHealthEvaluation.md)
 - [ServiceFabricClientApis.AveragePartitionLoadScalingTrigger](docs/AveragePartitionLoadScalingTrigger.md)
 - [ServiceFabricClientApis.AverageServiceLoadScalingTrigger](docs/AverageServiceLoadScalingTrigger.md)
 - [ServiceFabricClientApis.AzureBlobBackupStorageDescription](docs/AzureBlobBackupStorageDescription.md)
 - [ServiceFabricClientApis.BackupConfigurationInfo](docs/BackupConfigurationInfo.md)
 - [ServiceFabricClientApis.BackupEntity](docs/BackupEntity.md)
 - [ServiceFabricClientApis.BackupEntityKind](docs/BackupEntityKind.md)
 - [ServiceFabricClientApis.BackupEpoch](docs/BackupEpoch.md)
 - [ServiceFabricClientApis.BackupInfo](docs/BackupInfo.md)
 - [ServiceFabricClientApis.BackupPartitionDescription](docs/BackupPartitionDescription.md)
 - [ServiceFabricClientApis.BackupPolicyDescription](docs/BackupPolicyDescription.md)
 - [ServiceFabricClientApis.BackupPolicyScope](docs/BackupPolicyScope.md)
 - [ServiceFabricClientApis.BackupProgressInfo](docs/BackupProgressInfo.md)
 - [ServiceFabricClientApis.BackupScheduleDescription](docs/BackupScheduleDescription.md)
 - [ServiceFabricClientApis.BackupScheduleFrequencyType](docs/BackupScheduleFrequencyType.md)
 - [ServiceFabricClientApis.BackupScheduleKind](docs/BackupScheduleKind.md)
 - [ServiceFabricClientApis.BackupState](docs/BackupState.md)
 - [ServiceFabricClientApis.BackupStorageDescription](docs/BackupStorageDescription.md)
 - [ServiceFabricClientApis.BackupStorageKind](docs/BackupStorageKind.md)
 - [ServiceFabricClientApis.BackupSuspensionInfo](docs/BackupSuspensionInfo.md)
 - [ServiceFabricClientApis.BackupSuspensionScope](docs/BackupSuspensionScope.md)
 - [ServiceFabricClientApis.BackupType](docs/BackupType.md)
 - [ServiceFabricClientApis.BinaryPropertyValue](docs/BinaryPropertyValue.md)
 - [ServiceFabricClientApis.Chaos](docs/Chaos.md)
 - [ServiceFabricClientApis.ChaosContext](docs/ChaosContext.md)
 - [ServiceFabricClientApis.ChaosEvent](docs/ChaosEvent.md)
 - [ServiceFabricClientApis.ChaosEventKind](docs/ChaosEventKind.md)
 - [ServiceFabricClientApis.ChaosEventWrapper](docs/ChaosEventWrapper.md)
 - [ServiceFabricClientApis.ChaosEventsSegment](docs/ChaosEventsSegment.md)
 - [ServiceFabricClientApis.ChaosMovePrimaryFaultScheduledEvent](docs/ChaosMovePrimaryFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosMoveSecondaryFaultScheduledEvent](docs/ChaosMoveSecondaryFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosParameters](docs/ChaosParameters.md)
 - [ServiceFabricClientApis.ChaosParametersDictionaryItem](docs/ChaosParametersDictionaryItem.md)
 - [ServiceFabricClientApis.ChaosRemoveReplicaFaultCompletedEvent](docs/ChaosRemoveReplicaFaultCompletedEvent.md)
 - [ServiceFabricClientApis.ChaosRemoveReplicaFaultScheduledEvent](docs/ChaosRemoveReplicaFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosRestartCodePackageFaultCompletedEvent](docs/ChaosRestartCodePackageFaultCompletedEvent.md)
 - [ServiceFabricClientApis.ChaosRestartCodePackageFaultScheduledEvent](docs/ChaosRestartCodePackageFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosRestartNodeFaultCompletedEvent](docs/ChaosRestartNodeFaultCompletedEvent.md)
 - [ServiceFabricClientApis.ChaosRestartNodeFaultScheduledEvent](docs/ChaosRestartNodeFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosRestartReplicaFaultScheduledEvent](docs/ChaosRestartReplicaFaultScheduledEvent.md)
 - [ServiceFabricClientApis.ChaosSchedule](docs/ChaosSchedule.md)
 - [ServiceFabricClientApis.ChaosScheduleDescription](docs/ChaosScheduleDescription.md)
 - [ServiceFabricClientApis.ChaosScheduleJob](docs/ChaosScheduleJob.md)
 - [ServiceFabricClientApis.ChaosScheduleJobActiveDaysOfWeek](docs/ChaosScheduleJobActiveDaysOfWeek.md)
 - [ServiceFabricClientApis.ChaosScheduleStatus](docs/ChaosScheduleStatus.md)
 - [ServiceFabricClientApis.ChaosStartedEvent](docs/ChaosStartedEvent.md)
 - [ServiceFabricClientApis.ChaosStatus](docs/ChaosStatus.md)
 - [ServiceFabricClientApis.ChaosStoppedEvent](docs/ChaosStoppedEvent.md)
 - [ServiceFabricClientApis.ChaosTargetFilter](docs/ChaosTargetFilter.md)
 - [ServiceFabricClientApis.CheckExistsPropertyBatchOperation](docs/CheckExistsPropertyBatchOperation.md)
 - [ServiceFabricClientApis.CheckSequencePropertyBatchOperation](docs/CheckSequencePropertyBatchOperation.md)
 - [ServiceFabricClientApis.CheckValuePropertyBatchOperation](docs/CheckValuePropertyBatchOperation.md)
 - [ServiceFabricClientApis.ClusterConfiguration](docs/ClusterConfiguration.md)
 - [ServiceFabricClientApis.ClusterConfigurationUpgradeDescription](docs/ClusterConfigurationUpgradeDescription.md)
 - [ServiceFabricClientApis.ClusterConfigurationUpgradeStatusInfo](docs/ClusterConfigurationUpgradeStatusInfo.md)
 - [ServiceFabricClientApis.ClusterEvent](docs/ClusterEvent.md)
 - [ServiceFabricClientApis.ClusterHealth](docs/ClusterHealth.md)
 - [ServiceFabricClientApis.ClusterHealthChunk](docs/ClusterHealthChunk.md)
 - [ServiceFabricClientApis.ClusterHealthChunkQueryDescription](docs/ClusterHealthChunkQueryDescription.md)
 - [ServiceFabricClientApis.ClusterHealthPolicies](docs/ClusterHealthPolicies.md)
 - [ServiceFabricClientApis.ClusterHealthPolicy](docs/ClusterHealthPolicy.md)
 - [ServiceFabricClientApis.ClusterHealthReportCreatedEvent](docs/ClusterHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.ClusterHealthReportExpiredEvent](docs/ClusterHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.ClusterManifest](docs/ClusterManifest.md)
 - [ServiceFabricClientApis.ClusterUpgradeCompleteEvent](docs/ClusterUpgradeCompleteEvent.md)
 - [ServiceFabricClientApis.ClusterUpgradeDescriptionObject](docs/ClusterUpgradeDescriptionObject.md)
 - [ServiceFabricClientApis.ClusterUpgradeDomainCompleteEvent](docs/ClusterUpgradeDomainCompleteEvent.md)
 - [ServiceFabricClientApis.ClusterUpgradeHealthPolicyObject](docs/ClusterUpgradeHealthPolicyObject.md)
 - [ServiceFabricClientApis.ClusterUpgradeProgressObject](docs/ClusterUpgradeProgressObject.md)
 - [ServiceFabricClientApis.ClusterUpgradeRollbackCompleteEvent](docs/ClusterUpgradeRollbackCompleteEvent.md)
 - [ServiceFabricClientApis.ClusterUpgradeRollbackStartEvent](docs/ClusterUpgradeRollbackStartEvent.md)
 - [ServiceFabricClientApis.ClusterUpgradeStartEvent](docs/ClusterUpgradeStartEvent.md)
 - [ServiceFabricClientApis.CodePackageEntryPoint](docs/CodePackageEntryPoint.md)
 - [ServiceFabricClientApis.CodePackageEntryPointStatistics](docs/CodePackageEntryPointStatistics.md)
 - [ServiceFabricClientApis.ComposeDeploymentStatus](docs/ComposeDeploymentStatus.md)
 - [ServiceFabricClientApis.ComposeDeploymentStatusInfo](docs/ComposeDeploymentStatusInfo.md)
 - [ServiceFabricClientApis.ComposeDeploymentUpgradeDescription](docs/ComposeDeploymentUpgradeDescription.md)
 - [ServiceFabricClientApis.ComposeDeploymentUpgradeProgressInfo](docs/ComposeDeploymentUpgradeProgressInfo.md)
 - [ServiceFabricClientApis.ComposeDeploymentUpgradeState](docs/ComposeDeploymentUpgradeState.md)
 - [ServiceFabricClientApis.ContainerApiRequestBody](docs/ContainerApiRequestBody.md)
 - [ServiceFabricClientApis.ContainerApiResponse](docs/ContainerApiResponse.md)
 - [ServiceFabricClientApis.ContainerApiResult](docs/ContainerApiResult.md)
 - [ServiceFabricClientApis.ContainerDeactivatedEvent](docs/ContainerDeactivatedEvent.md)
 - [ServiceFabricClientApis.ContainerInstanceEvent](docs/ContainerInstanceEvent.md)
 - [ServiceFabricClientApis.ContainerLogs](docs/ContainerLogs.md)
 - [ServiceFabricClientApis.CreateComposeDeploymentDescription](docs/CreateComposeDeploymentDescription.md)
 - [ServiceFabricClientApis.CurrentUpgradeDomainProgressInfo](docs/CurrentUpgradeDomainProgressInfo.md)
 - [ServiceFabricClientApis.DayOfWeek](docs/DayOfWeek.md)
 - [ServiceFabricClientApis.DeactivationIntentDescription](docs/DeactivationIntentDescription.md)
 - [ServiceFabricClientApis.DeletePropertyBatchOperation](docs/DeletePropertyBatchOperation.md)
 - [ServiceFabricClientApis.DeltaNodesCheckHealthEvaluation](docs/DeltaNodesCheckHealthEvaluation.md)
 - [ServiceFabricClientApis.DeployServicePackageToNodeDescription](docs/DeployServicePackageToNodeDescription.md)
 - [ServiceFabricClientApis.DeployedApplicationHealth](docs/DeployedApplicationHealth.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthEvaluation](docs/DeployedApplicationHealthEvaluation.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthReportCreatedEvent](docs/DeployedApplicationHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthReportExpiredEvent](docs/DeployedApplicationHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthState](docs/DeployedApplicationHealthState.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthStateChunk](docs/DeployedApplicationHealthStateChunk.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthStateChunkList](docs/DeployedApplicationHealthStateChunkList.md)
 - [ServiceFabricClientApis.DeployedApplicationHealthStateFilter](docs/DeployedApplicationHealthStateFilter.md)
 - [ServiceFabricClientApis.DeployedApplicationInfo](docs/DeployedApplicationInfo.md)
 - [ServiceFabricClientApis.DeployedApplicationStatus](docs/DeployedApplicationStatus.md)
 - [ServiceFabricClientApis.DeployedApplicationsHealthEvaluation](docs/DeployedApplicationsHealthEvaluation.md)
 - [ServiceFabricClientApis.DeployedCodePackageInfo](docs/DeployedCodePackageInfo.md)
 - [ServiceFabricClientApis.DeployedServiceHealthReportCreatedEvent](docs/DeployedServiceHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.DeployedServiceHealthReportExpiredEvent](docs/DeployedServiceHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealth](docs/DeployedServicePackageHealth.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealthEvaluation](docs/DeployedServicePackageHealthEvaluation.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealthState](docs/DeployedServicePackageHealthState.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealthStateChunk](docs/DeployedServicePackageHealthStateChunk.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealthStateChunkList](docs/DeployedServicePackageHealthStateChunkList.md)
 - [ServiceFabricClientApis.DeployedServicePackageHealthStateFilter](docs/DeployedServicePackageHealthStateFilter.md)
 - [ServiceFabricClientApis.DeployedServicePackageInfo](docs/DeployedServicePackageInfo.md)
 - [ServiceFabricClientApis.DeployedServicePackagesHealthEvaluation](docs/DeployedServicePackagesHealthEvaluation.md)
 - [ServiceFabricClientApis.DeployedServiceReplicaDetailInfo](docs/DeployedServiceReplicaDetailInfo.md)
 - [ServiceFabricClientApis.DeployedServiceReplicaInfo](docs/DeployedServiceReplicaInfo.md)
 - [ServiceFabricClientApis.DeployedServiceTypeInfo](docs/DeployedServiceTypeInfo.md)
 - [ServiceFabricClientApis.DeployedStatefulServiceReplicaDetailInfo](docs/DeployedStatefulServiceReplicaDetailInfo.md)
 - [ServiceFabricClientApis.DeployedStatefulServiceReplicaInfo](docs/DeployedStatefulServiceReplicaInfo.md)
 - [ServiceFabricClientApis.DeployedStatelessServiceInstanceDetailInfo](docs/DeployedStatelessServiceInstanceDetailInfo.md)
 - [ServiceFabricClientApis.DeployedStatelessServiceInstanceInfo](docs/DeployedStatelessServiceInstanceInfo.md)
 - [ServiceFabricClientApis.DeploymentStatus](docs/DeploymentStatus.md)
 - [ServiceFabricClientApis.DoublePropertyValue](docs/DoublePropertyValue.md)
 - [ServiceFabricClientApis.EnableBackupDescription](docs/EnableBackupDescription.md)
 - [ServiceFabricClientApis.EnsureAvailabilitySafetyCheck](docs/EnsureAvailabilitySafetyCheck.md)
 - [ServiceFabricClientApis.EnsurePartitionQurumSafetyCheck](docs/EnsurePartitionQurumSafetyCheck.md)
 - [ServiceFabricClientApis.EntityHealth](docs/EntityHealth.md)
 - [ServiceFabricClientApis.EntityHealthState](docs/EntityHealthState.md)
 - [ServiceFabricClientApis.EntityHealthStateChunk](docs/EntityHealthStateChunk.md)
 - [ServiceFabricClientApis.EntityHealthStateChunkList](docs/EntityHealthStateChunkList.md)
 - [ServiceFabricClientApis.EntityKind](docs/EntityKind.md)
 - [ServiceFabricClientApis.EntityKindHealthStateCount](docs/EntityKindHealthStateCount.md)
 - [ServiceFabricClientApis.EntryPointStatus](docs/EntryPointStatus.md)
 - [ServiceFabricClientApis.Epoch](docs/Epoch.md)
 - [ServiceFabricClientApis.EventHealthEvaluation](docs/EventHealthEvaluation.md)
 - [ServiceFabricClientApis.ExecutingFaultsChaosEvent](docs/ExecutingFaultsChaosEvent.md)
 - [ServiceFabricClientApis.ExternalStoreProvisionApplicationTypeDescription](docs/ExternalStoreProvisionApplicationTypeDescription.md)
 - [ServiceFabricClientApis.FabricCodeVersionInfo](docs/FabricCodeVersionInfo.md)
 - [ServiceFabricClientApis.FabricConfigVersionInfo](docs/FabricConfigVersionInfo.md)
 - [ServiceFabricClientApis.FabricError](docs/FabricError.md)
 - [ServiceFabricClientApis.FabricErrorCodes](docs/FabricErrorCodes.md)
 - [ServiceFabricClientApis.FabricErrorError](docs/FabricErrorError.md)
 - [ServiceFabricClientApis.FabricEvent](docs/FabricEvent.md)
 - [ServiceFabricClientApis.FabricEventKind](docs/FabricEventKind.md)
 - [ServiceFabricClientApis.FabricReplicaStatus](docs/FabricReplicaStatus.md)
 - [ServiceFabricClientApis.FailedPropertyBatchInfo](docs/FailedPropertyBatchInfo.md)
 - [ServiceFabricClientApis.FailedUpgradeDomainProgressObject](docs/FailedUpgradeDomainProgressObject.md)
 - [ServiceFabricClientApis.FailureAction](docs/FailureAction.md)
 - [ServiceFabricClientApis.FailureReason](docs/FailureReason.md)
 - [ServiceFabricClientApis.FailureUpgradeDomainProgressInfo](docs/FailureUpgradeDomainProgressInfo.md)
 - [ServiceFabricClientApis.FileInfo](docs/FileInfo.md)
 - [ServiceFabricClientApis.FileShareBackupStorageDescription](docs/FileShareBackupStorageDescription.md)
 - [ServiceFabricClientApis.FileVersion](docs/FileVersion.md)
 - [ServiceFabricClientApis.FolderInfo](docs/FolderInfo.md)
 - [ServiceFabricClientApis.FrequencyBasedBackupScheduleDescription](docs/FrequencyBasedBackupScheduleDescription.md)
 - [ServiceFabricClientApis.GetBackupByStorageQueryDescription](docs/GetBackupByStorageQueryDescription.md)
 - [ServiceFabricClientApis.GetPropertyBatchOperation](docs/GetPropertyBatchOperation.md)
 - [ServiceFabricClientApis.GuidPropertyValue](docs/GuidPropertyValue.md)
 - [ServiceFabricClientApis.HealthEvaluation](docs/HealthEvaluation.md)
 - [ServiceFabricClientApis.HealthEvaluationKind](docs/HealthEvaluationKind.md)
 - [ServiceFabricClientApis.HealthEvaluationWrapper](docs/HealthEvaluationWrapper.md)
 - [ServiceFabricClientApis.HealthEvent](docs/HealthEvent.md)
 - [ServiceFabricClientApis.HealthInformation](docs/HealthInformation.md)
 - [ServiceFabricClientApis.HealthState](docs/HealthState.md)
 - [ServiceFabricClientApis.HealthStateCount](docs/HealthStateCount.md)
 - [ServiceFabricClientApis.HealthStatistics](docs/HealthStatistics.md)
 - [ServiceFabricClientApis.HostIsolationMode](docs/HostIsolationMode.md)
 - [ServiceFabricClientApis.HostType](docs/HostType.md)
 - [ServiceFabricClientApis.ImageStoreContent](docs/ImageStoreContent.md)
 - [ServiceFabricClientApis.ImageStoreCopyDescription](docs/ImageStoreCopyDescription.md)
 - [ServiceFabricClientApis.Int64PropertyValue](docs/Int64PropertyValue.md)
 - [ServiceFabricClientApis.Int64RangePartitionInformation](docs/Int64RangePartitionInformation.md)
 - [ServiceFabricClientApis.InvokeDataLossResult](docs/InvokeDataLossResult.md)
 - [ServiceFabricClientApis.InvokeQuorumLossResult](docs/InvokeQuorumLossResult.md)
 - [ServiceFabricClientApis.KeyValueStoreReplicaStatus](docs/KeyValueStoreReplicaStatus.md)
 - [ServiceFabricClientApis.LoadMetricReport](docs/LoadMetricReport.md)
 - [ServiceFabricClientApis.LoadMetricReportInfo](docs/LoadMetricReportInfo.md)
 - [ServiceFabricClientApis.MonitoringPolicyDescription](docs/MonitoringPolicyDescription.md)
 - [ServiceFabricClientApis.MoveCost](docs/MoveCost.md)
 - [ServiceFabricClientApis.NameDescription](docs/NameDescription.md)
 - [ServiceFabricClientApis.NamedPartitionInformation](docs/NamedPartitionInformation.md)
 - [ServiceFabricClientApis.NamedPartitionSchemeDescription](docs/NamedPartitionSchemeDescription.md)
 - [ServiceFabricClientApis.NodeAbortedEvent](docs/NodeAbortedEvent.md)
 - [ServiceFabricClientApis.NodeAbortingEvent](docs/NodeAbortingEvent.md)
 - [ServiceFabricClientApis.NodeAddedEvent](docs/NodeAddedEvent.md)
 - [ServiceFabricClientApis.NodeCloseEvent](docs/NodeCloseEvent.md)
 - [ServiceFabricClientApis.NodeClosingEvent](docs/NodeClosingEvent.md)
 - [ServiceFabricClientApis.NodeDeactivateCompleteEvent](docs/NodeDeactivateCompleteEvent.md)
 - [ServiceFabricClientApis.NodeDeactivateStartEvent](docs/NodeDeactivateStartEvent.md)
 - [ServiceFabricClientApis.NodeDeactivationInfo](docs/NodeDeactivationInfo.md)
 - [ServiceFabricClientApis.NodeDeactivationIntent](docs/NodeDeactivationIntent.md)
 - [ServiceFabricClientApis.NodeDeactivationStatus](docs/NodeDeactivationStatus.md)
 - [ServiceFabricClientApis.NodeDeactivationTask](docs/NodeDeactivationTask.md)
 - [ServiceFabricClientApis.NodeDeactivationTaskId](docs/NodeDeactivationTaskId.md)
 - [ServiceFabricClientApis.NodeDeactivationTaskType](docs/NodeDeactivationTaskType.md)
 - [ServiceFabricClientApis.NodeDownEvent](docs/NodeDownEvent.md)
 - [ServiceFabricClientApis.NodeEvent](docs/NodeEvent.md)
 - [ServiceFabricClientApis.NodeHealth](docs/NodeHealth.md)
 - [ServiceFabricClientApis.NodeHealthEvaluation](docs/NodeHealthEvaluation.md)
 - [ServiceFabricClientApis.NodeHealthReportCreatedEvent](docs/NodeHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.NodeHealthReportExpiredEvent](docs/NodeHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.NodeHealthState](docs/NodeHealthState.md)
 - [ServiceFabricClientApis.NodeHealthStateChunk](docs/NodeHealthStateChunk.md)
 - [ServiceFabricClientApis.NodeHealthStateChunkList](docs/NodeHealthStateChunkList.md)
 - [ServiceFabricClientApis.NodeHealthStateFilter](docs/NodeHealthStateFilter.md)
 - [ServiceFabricClientApis.NodeId](docs/NodeId.md)
 - [ServiceFabricClientApis.NodeImpact](docs/NodeImpact.md)
 - [ServiceFabricClientApis.NodeInfo](docs/NodeInfo.md)
 - [ServiceFabricClientApis.NodeLoadInfo](docs/NodeLoadInfo.md)
 - [ServiceFabricClientApis.NodeLoadMetricInformation](docs/NodeLoadMetricInformation.md)
 - [ServiceFabricClientApis.NodeOpenFailedEvent](docs/NodeOpenFailedEvent.md)
 - [ServiceFabricClientApis.NodeOpenedSuccessEvent](docs/NodeOpenedSuccessEvent.md)
 - [ServiceFabricClientApis.NodeOpeningEvent](docs/NodeOpeningEvent.md)
 - [ServiceFabricClientApis.NodeRemovedEvent](docs/NodeRemovedEvent.md)
 - [ServiceFabricClientApis.NodeRepairImpactDescription](docs/NodeRepairImpactDescription.md)
 - [ServiceFabricClientApis.NodeRepairTargetDescription](docs/NodeRepairTargetDescription.md)
 - [ServiceFabricClientApis.NodeResult](docs/NodeResult.md)
 - [ServiceFabricClientApis.NodeStatus](docs/NodeStatus.md)
 - [ServiceFabricClientApis.NodeTransitionProgress](docs/NodeTransitionProgress.md)
 - [ServiceFabricClientApis.NodeTransitionResult](docs/NodeTransitionResult.md)
 - [ServiceFabricClientApis.NodeUpEvent](docs/NodeUpEvent.md)
 - [ServiceFabricClientApis.NodeUpgradePhase](docs/NodeUpgradePhase.md)
 - [ServiceFabricClientApis.NodeUpgradeProgressInfo](docs/NodeUpgradeProgressInfo.md)
 - [ServiceFabricClientApis.NodesHealthEvaluation](docs/NodesHealthEvaluation.md)
 - [ServiceFabricClientApis.OperationState](docs/OperationState.md)
 - [ServiceFabricClientApis.OperationStatus](docs/OperationStatus.md)
 - [ServiceFabricClientApis.OperationType](docs/OperationType.md)
 - [ServiceFabricClientApis.PackageSharingPolicyInfo](docs/PackageSharingPolicyInfo.md)
 - [ServiceFabricClientApis.PackageSharingPolicyScope](docs/PackageSharingPolicyScope.md)
 - [ServiceFabricClientApis.PagedApplicationInfoList](docs/PagedApplicationInfoList.md)
 - [ServiceFabricClientApis.PagedApplicationTypeInfoList](docs/PagedApplicationTypeInfoList.md)
 - [ServiceFabricClientApis.PagedBackupConfigurationInfoList](docs/PagedBackupConfigurationInfoList.md)
 - [ServiceFabricClientApis.PagedBackupEntityList](docs/PagedBackupEntityList.md)
 - [ServiceFabricClientApis.PagedBackupInfoList](docs/PagedBackupInfoList.md)
 - [ServiceFabricClientApis.PagedBackupPolicyDescriptionList](docs/PagedBackupPolicyDescriptionList.md)
 - [ServiceFabricClientApis.PagedComposeDeploymentStatusInfoList](docs/PagedComposeDeploymentStatusInfoList.md)
 - [ServiceFabricClientApis.PagedDeployedApplicationInfoList](docs/PagedDeployedApplicationInfoList.md)
 - [ServiceFabricClientApis.PagedNodeInfoList](docs/PagedNodeInfoList.md)
 - [ServiceFabricClientApis.PagedPropertyInfoList](docs/PagedPropertyInfoList.md)
 - [ServiceFabricClientApis.PagedReplicaInfoList](docs/PagedReplicaInfoList.md)
 - [ServiceFabricClientApis.PagedServiceInfoList](docs/PagedServiceInfoList.md)
 - [ServiceFabricClientApis.PagedServicePartitionInfoList](docs/PagedServicePartitionInfoList.md)
 - [ServiceFabricClientApis.PagedSubNameInfoList](docs/PagedSubNameInfoList.md)
 - [ServiceFabricClientApis.PartitionAccessStatus](docs/PartitionAccessStatus.md)
 - [ServiceFabricClientApis.PartitionAnalysisEvent](docs/PartitionAnalysisEvent.md)
 - [ServiceFabricClientApis.PartitionBackupConfigurationInfo](docs/PartitionBackupConfigurationInfo.md)
 - [ServiceFabricClientApis.PartitionBackupEntity](docs/PartitionBackupEntity.md)
 - [ServiceFabricClientApis.PartitionDataLossProgress](docs/PartitionDataLossProgress.md)
 - [ServiceFabricClientApis.PartitionEvent](docs/PartitionEvent.md)
 - [ServiceFabricClientApis.PartitionHealth](docs/PartitionHealth.md)
 - [ServiceFabricClientApis.PartitionHealthEvaluation](docs/PartitionHealthEvaluation.md)
 - [ServiceFabricClientApis.PartitionHealthReportCreatedEvent](docs/PartitionHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.PartitionHealthReportExpiredEvent](docs/PartitionHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.PartitionHealthState](docs/PartitionHealthState.md)
 - [ServiceFabricClientApis.PartitionHealthStateChunk](docs/PartitionHealthStateChunk.md)
 - [ServiceFabricClientApis.PartitionHealthStateChunkList](docs/PartitionHealthStateChunkList.md)
 - [ServiceFabricClientApis.PartitionHealthStateFilter](docs/PartitionHealthStateFilter.md)
 - [ServiceFabricClientApis.PartitionInformation](docs/PartitionInformation.md)
 - [ServiceFabricClientApis.PartitionInstanceCountScaleMechanism](docs/PartitionInstanceCountScaleMechanism.md)
 - [ServiceFabricClientApis.PartitionLoadInformation](docs/PartitionLoadInformation.md)
 - [ServiceFabricClientApis.PartitionPrimaryMoveAnalysisEvent](docs/PartitionPrimaryMoveAnalysisEvent.md)
 - [ServiceFabricClientApis.PartitionQuorumLossProgress](docs/PartitionQuorumLossProgress.md)
 - [ServiceFabricClientApis.PartitionReconfigurationCompletedEvent](docs/PartitionReconfigurationCompletedEvent.md)
 - [ServiceFabricClientApis.PartitionRestartProgress](docs/PartitionRestartProgress.md)
 - [ServiceFabricClientApis.PartitionSafetyCheck](docs/PartitionSafetyCheck.md)
 - [ServiceFabricClientApis.PartitionScheme](docs/PartitionScheme.md)
 - [ServiceFabricClientApis.PartitionSchemeDescription](docs/PartitionSchemeDescription.md)
 - [ServiceFabricClientApis.PartitionsHealthEvaluation](docs/PartitionsHealthEvaluation.md)
 - [ServiceFabricClientApis.PrimaryReplicatorStatus](docs/PrimaryReplicatorStatus.md)
 - [ServiceFabricClientApis.ProcessDeactivatedEvent](docs/ProcessDeactivatedEvent.md)
 - [ServiceFabricClientApis.PropertyBatchDescriptionList](docs/PropertyBatchDescriptionList.md)
 - [ServiceFabricClientApis.PropertyBatchInfo](docs/PropertyBatchInfo.md)
 - [ServiceFabricClientApis.PropertyBatchInfoKind](docs/PropertyBatchInfoKind.md)
 - [ServiceFabricClientApis.PropertyBatchOperation](docs/PropertyBatchOperation.md)
 - [ServiceFabricClientApis.PropertyBatchOperationKind](docs/PropertyBatchOperationKind.md)
 - [ServiceFabricClientApis.PropertyDescription](docs/PropertyDescription.md)
 - [ServiceFabricClientApis.PropertyInfo](docs/PropertyInfo.md)
 - [ServiceFabricClientApis.PropertyMetadata](docs/PropertyMetadata.md)
 - [ServiceFabricClientApis.PropertyValue](docs/PropertyValue.md)
 - [ServiceFabricClientApis.PropertyValueKind](docs/PropertyValueKind.md)
 - [ServiceFabricClientApis.ProvisionApplicationTypeDescription](docs/ProvisionApplicationTypeDescription.md)
 - [ServiceFabricClientApis.ProvisionApplicationTypeDescriptionBase](docs/ProvisionApplicationTypeDescriptionBase.md)
 - [ServiceFabricClientApis.ProvisionApplicationTypeKind](docs/ProvisionApplicationTypeKind.md)
 - [ServiceFabricClientApis.ProvisionFabricDescription](docs/ProvisionFabricDescription.md)
 - [ServiceFabricClientApis.PutPropertyBatchOperation](docs/PutPropertyBatchOperation.md)
 - [ServiceFabricClientApis.ReconfigurationInformation](docs/ReconfigurationInformation.md)
 - [ServiceFabricClientApis.ReconfigurationPhase](docs/ReconfigurationPhase.md)
 - [ServiceFabricClientApis.ReconfigurationType](docs/ReconfigurationType.md)
 - [ServiceFabricClientApis.RegistryCredential](docs/RegistryCredential.md)
 - [ServiceFabricClientApis.RemoteReplicatorAcknowledgementDetail](docs/RemoteReplicatorAcknowledgementDetail.md)
 - [ServiceFabricClientApis.RemoteReplicatorAcknowledgementStatus](docs/RemoteReplicatorAcknowledgementStatus.md)
 - [ServiceFabricClientApis.RemoteReplicatorStatus](docs/RemoteReplicatorStatus.md)
 - [ServiceFabricClientApis.RepairImpactDescriptionBase](docs/RepairImpactDescriptionBase.md)
 - [ServiceFabricClientApis.RepairImpactKind](docs/RepairImpactKind.md)
 - [ServiceFabricClientApis.RepairTargetDescriptionBase](docs/RepairTargetDescriptionBase.md)
 - [ServiceFabricClientApis.RepairTargetKind](docs/RepairTargetKind.md)
 - [ServiceFabricClientApis.RepairTask](docs/RepairTask.md)
 - [ServiceFabricClientApis.RepairTaskApproveDescription](docs/RepairTaskApproveDescription.md)
 - [ServiceFabricClientApis.RepairTaskCancelDescription](docs/RepairTaskCancelDescription.md)
 - [ServiceFabricClientApis.RepairTaskDeleteDescription](docs/RepairTaskDeleteDescription.md)
 - [ServiceFabricClientApis.RepairTaskHealthCheckState](docs/RepairTaskHealthCheckState.md)
 - [ServiceFabricClientApis.RepairTaskHistory](docs/RepairTaskHistory.md)
 - [ServiceFabricClientApis.RepairTaskUpdateHealthPolicyDescription](docs/RepairTaskUpdateHealthPolicyDescription.md)
 - [ServiceFabricClientApis.RepairTaskUpdateInfo](docs/RepairTaskUpdateInfo.md)
 - [ServiceFabricClientApis.ReplicaEvent](docs/ReplicaEvent.md)
 - [ServiceFabricClientApis.ReplicaHealth](docs/ReplicaHealth.md)
 - [ServiceFabricClientApis.ReplicaHealthEvaluation](docs/ReplicaHealthEvaluation.md)
 - [ServiceFabricClientApis.ReplicaHealthState](docs/ReplicaHealthState.md)
 - [ServiceFabricClientApis.ReplicaHealthStateChunk](docs/ReplicaHealthStateChunk.md)
 - [ServiceFabricClientApis.ReplicaHealthStateChunkList](docs/ReplicaHealthStateChunkList.md)
 - [ServiceFabricClientApis.ReplicaHealthStateFilter](docs/ReplicaHealthStateFilter.md)
 - [ServiceFabricClientApis.ReplicaInfo](docs/ReplicaInfo.md)
 - [ServiceFabricClientApis.ReplicaKind](docs/ReplicaKind.md)
 - [ServiceFabricClientApis.ReplicaRole](docs/ReplicaRole.md)
 - [ServiceFabricClientApis.ReplicaStatus](docs/ReplicaStatus.md)
 - [ServiceFabricClientApis.ReplicaStatusBase](docs/ReplicaStatusBase.md)
 - [ServiceFabricClientApis.ReplicasHealthEvaluation](docs/ReplicasHealthEvaluation.md)
 - [ServiceFabricClientApis.ReplicatorOperationName](docs/ReplicatorOperationName.md)
 - [ServiceFabricClientApis.ReplicatorQueueStatus](docs/ReplicatorQueueStatus.md)
 - [ServiceFabricClientApis.ReplicatorStatus](docs/ReplicatorStatus.md)
 - [ServiceFabricClientApis.ResolvedServiceEndpoint](docs/ResolvedServiceEndpoint.md)
 - [ServiceFabricClientApis.ResolvedServicePartition](docs/ResolvedServicePartition.md)
 - [ServiceFabricClientApis.RestartDeployedCodePackageDescription](docs/RestartDeployedCodePackageDescription.md)
 - [ServiceFabricClientApis.RestartNodeDescription](docs/RestartNodeDescription.md)
 - [ServiceFabricClientApis.RestartPartitionResult](docs/RestartPartitionResult.md)
 - [ServiceFabricClientApis.RestorePartitionDescription](docs/RestorePartitionDescription.md)
 - [ServiceFabricClientApis.RestoreProgressInfo](docs/RestoreProgressInfo.md)
 - [ServiceFabricClientApis.RestoreState](docs/RestoreState.md)
 - [ServiceFabricClientApis.ResumeApplicationUpgradeDescription](docs/ResumeApplicationUpgradeDescription.md)
 - [ServiceFabricClientApis.ResumeClusterUpgradeDescription](docs/ResumeClusterUpgradeDescription.md)
 - [ServiceFabricClientApis.RollingUpgradeUpdateDescription](docs/RollingUpgradeUpdateDescription.md)
 - [ServiceFabricClientApis.SafetyCheck](docs/SafetyCheck.md)
 - [ServiceFabricClientApis.SafetyCheckKind](docs/SafetyCheckKind.md)
 - [ServiceFabricClientApis.SafetyCheckWrapper](docs/SafetyCheckWrapper.md)
 - [ServiceFabricClientApis.ScalingMechanismDescription](docs/ScalingMechanismDescription.md)
 - [ServiceFabricClientApis.ScalingMechanismKind](docs/ScalingMechanismKind.md)
 - [ServiceFabricClientApis.ScalingPolicyDescription](docs/ScalingPolicyDescription.md)
 - [ServiceFabricClientApis.ScalingTriggerDescription](docs/ScalingTriggerDescription.md)
 - [ServiceFabricClientApis.ScalingTriggerKind](docs/ScalingTriggerKind.md)
 - [ServiceFabricClientApis.SecondaryActiveReplicatorStatus](docs/SecondaryActiveReplicatorStatus.md)
 - [ServiceFabricClientApis.SecondaryIdleReplicatorStatus](docs/SecondaryIdleReplicatorStatus.md)
 - [ServiceFabricClientApis.SecondaryReplicatorStatus](docs/SecondaryReplicatorStatus.md)
 - [ServiceFabricClientApis.SeedNodeSafetyCheck](docs/SeedNodeSafetyCheck.md)
 - [ServiceFabricClientApis.SelectedPartition](docs/SelectedPartition.md)
 - [ServiceFabricClientApis.ServiceBackupConfigurationInfo](docs/ServiceBackupConfigurationInfo.md)
 - [ServiceFabricClientApis.ServiceBackupEntity](docs/ServiceBackupEntity.md)
 - [ServiceFabricClientApis.ServiceCorrelationDescription](docs/ServiceCorrelationDescription.md)
 - [ServiceFabricClientApis.ServiceCorrelationScheme](docs/ServiceCorrelationScheme.md)
 - [ServiceFabricClientApis.ServiceCreatedEvent](docs/ServiceCreatedEvent.md)
 - [ServiceFabricClientApis.ServiceDeletedEvent](docs/ServiceDeletedEvent.md)
 - [ServiceFabricClientApis.ServiceDescription](docs/ServiceDescription.md)
 - [ServiceFabricClientApis.ServiceEndpointRole](docs/ServiceEndpointRole.md)
 - [ServiceFabricClientApis.ServiceEvent](docs/ServiceEvent.md)
 - [ServiceFabricClientApis.ServiceFromTemplateDescription](docs/ServiceFromTemplateDescription.md)
 - [ServiceFabricClientApis.ServiceHealth](docs/ServiceHealth.md)
 - [ServiceFabricClientApis.ServiceHealthEvaluation](docs/ServiceHealthEvaluation.md)
 - [ServiceFabricClientApis.ServiceHealthReportCreatedEvent](docs/ServiceHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.ServiceHealthReportExpiredEvent](docs/ServiceHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.ServiceHealthState](docs/ServiceHealthState.md)
 - [ServiceFabricClientApis.ServiceHealthStateChunk](docs/ServiceHealthStateChunk.md)
 - [ServiceFabricClientApis.ServiceHealthStateChunkList](docs/ServiceHealthStateChunkList.md)
 - [ServiceFabricClientApis.ServiceHealthStateFilter](docs/ServiceHealthStateFilter.md)
 - [ServiceFabricClientApis.ServiceInfo](docs/ServiceInfo.md)
 - [ServiceFabricClientApis.ServiceKind](docs/ServiceKind.md)
 - [ServiceFabricClientApis.ServiceLoadMetricDescription](docs/ServiceLoadMetricDescription.md)
 - [ServiceFabricClientApis.ServiceLoadMetricWeight](docs/ServiceLoadMetricWeight.md)
 - [ServiceFabricClientApis.ServiceNameInfo](docs/ServiceNameInfo.md)
 - [ServiceFabricClientApis.ServiceOperationName](docs/ServiceOperationName.md)
 - [ServiceFabricClientApis.ServicePackageActivationMode](docs/ServicePackageActivationMode.md)
 - [ServiceFabricClientApis.ServicePartitionInfo](docs/ServicePartitionInfo.md)
 - [ServiceFabricClientApis.ServicePartitionKind](docs/ServicePartitionKind.md)
 - [ServiceFabricClientApis.ServicePartitionStatus](docs/ServicePartitionStatus.md)
 - [ServiceFabricClientApis.ServicePlacementInvalidDomainPolicyDescription](docs/ServicePlacementInvalidDomainPolicyDescription.md)
 - [ServiceFabricClientApis.ServicePlacementNonPartiallyPlaceServicePolicyDescription](docs/ServicePlacementNonPartiallyPlaceServicePolicyDescription.md)
 - [ServiceFabricClientApis.ServicePlacementPolicyDescription](docs/ServicePlacementPolicyDescription.md)
 - [ServiceFabricClientApis.ServicePlacementPolicyType](docs/ServicePlacementPolicyType.md)
 - [ServiceFabricClientApis.ServicePlacementPreferPrimaryDomainPolicyDescription](docs/ServicePlacementPreferPrimaryDomainPolicyDescription.md)
 - [ServiceFabricClientApis.ServicePlacementRequireDomainDistributionPolicyDescription](docs/ServicePlacementRequireDomainDistributionPolicyDescription.md)
 - [ServiceFabricClientApis.ServicePlacementRequiredDomainPolicyDescription](docs/ServicePlacementRequiredDomainPolicyDescription.md)
 - [ServiceFabricClientApis.ServiceStatus](docs/ServiceStatus.md)
 - [ServiceFabricClientApis.ServiceTypeDescription](docs/ServiceTypeDescription.md)
 - [ServiceFabricClientApis.ServiceTypeExtensionDescription](docs/ServiceTypeExtensionDescription.md)
 - [ServiceFabricClientApis.ServiceTypeHealthPolicy](docs/ServiceTypeHealthPolicy.md)
 - [ServiceFabricClientApis.ServiceTypeHealthPolicyMapItem](docs/ServiceTypeHealthPolicyMapItem.md)
 - [ServiceFabricClientApis.ServiceTypeInfo](docs/ServiceTypeInfo.md)
 - [ServiceFabricClientApis.ServiceTypeManifest](docs/ServiceTypeManifest.md)
 - [ServiceFabricClientApis.ServiceTypeRegistrationStatus](docs/ServiceTypeRegistrationStatus.md)
 - [ServiceFabricClientApis.ServiceUpdateDescription](docs/ServiceUpdateDescription.md)
 - [ServiceFabricClientApis.ServicesHealthEvaluation](docs/ServicesHealthEvaluation.md)
 - [ServiceFabricClientApis.SingletonPartitionInformation](docs/SingletonPartitionInformation.md)
 - [ServiceFabricClientApis.SingletonPartitionSchemeDescription](docs/SingletonPartitionSchemeDescription.md)
 - [ServiceFabricClientApis.StartClusterUpgradeDescription](docs/StartClusterUpgradeDescription.md)
 - [ServiceFabricClientApis.StartedChaosEvent](docs/StartedChaosEvent.md)
 - [ServiceFabricClientApis.StatefulReplicaHealthReportCreatedEvent](docs/StatefulReplicaHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.StatefulReplicaHealthReportExpiredEvent](docs/StatefulReplicaHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.StatefulServiceDescription](docs/StatefulServiceDescription.md)
 - [ServiceFabricClientApis.StatefulServiceInfo](docs/StatefulServiceInfo.md)
 - [ServiceFabricClientApis.StatefulServicePartitionInfo](docs/StatefulServicePartitionInfo.md)
 - [ServiceFabricClientApis.StatefulServiceReplicaHealth](docs/StatefulServiceReplicaHealth.md)
 - [ServiceFabricClientApis.StatefulServiceReplicaHealthState](docs/StatefulServiceReplicaHealthState.md)
 - [ServiceFabricClientApis.StatefulServiceReplicaInfo](docs/StatefulServiceReplicaInfo.md)
 - [ServiceFabricClientApis.StatefulServiceTypeDescription](docs/StatefulServiceTypeDescription.md)
 - [ServiceFabricClientApis.StatefulServiceUpdateDescription](docs/StatefulServiceUpdateDescription.md)
 - [ServiceFabricClientApis.StatelessReplicaHealthReportCreatedEvent](docs/StatelessReplicaHealthReportCreatedEvent.md)
 - [ServiceFabricClientApis.StatelessReplicaHealthReportExpiredEvent](docs/StatelessReplicaHealthReportExpiredEvent.md)
 - [ServiceFabricClientApis.StatelessServiceDescription](docs/StatelessServiceDescription.md)
 - [ServiceFabricClientApis.StatelessServiceInfo](docs/StatelessServiceInfo.md)
 - [ServiceFabricClientApis.StatelessServiceInstanceHealth](docs/StatelessServiceInstanceHealth.md)
 - [ServiceFabricClientApis.StatelessServiceInstanceHealthState](docs/StatelessServiceInstanceHealthState.md)
 - [ServiceFabricClientApis.StatelessServiceInstanceInfo](docs/StatelessServiceInstanceInfo.md)
 - [ServiceFabricClientApis.StatelessServicePartitionInfo](docs/StatelessServicePartitionInfo.md)
 - [ServiceFabricClientApis.StatelessServiceTypeDescription](docs/StatelessServiceTypeDescription.md)
 - [ServiceFabricClientApis.StatelessServiceUpdateDescription](docs/StatelessServiceUpdateDescription.md)
 - [ServiceFabricClientApis.StoppedChaosEvent](docs/StoppedChaosEvent.md)
 - [ServiceFabricClientApis.StringPropertyValue](docs/StringPropertyValue.md)
 - [ServiceFabricClientApis.SuccessfulPropertyBatchInfo](docs/SuccessfulPropertyBatchInfo.md)
 - [ServiceFabricClientApis.SystemApplicationHealthEvaluation](docs/SystemApplicationHealthEvaluation.md)
 - [ServiceFabricClientApis.TestErrorChaosEvent](docs/TestErrorChaosEvent.md)
 - [ServiceFabricClientApis.TimeBasedBackupScheduleDescription](docs/TimeBasedBackupScheduleDescription.md)
 - [ServiceFabricClientApis.TimeOfDay](docs/TimeOfDay.md)
 - [ServiceFabricClientApis.TimeRange](docs/TimeRange.md)
 - [ServiceFabricClientApis.UniformInt64RangePartitionSchemeDescription](docs/UniformInt64RangePartitionSchemeDescription.md)
 - [ServiceFabricClientApis.UnprovisionApplicationTypeDescriptionInfo](docs/UnprovisionApplicationTypeDescriptionInfo.md)
 - [ServiceFabricClientApis.UnprovisionFabricDescription](docs/UnprovisionFabricDescription.md)
 - [ServiceFabricClientApis.UpdateClusterUpgradeDescription](docs/UpdateClusterUpgradeDescription.md)
 - [ServiceFabricClientApis.UpgradeDomainDeltaNodesCheckHealthEvaluation](docs/UpgradeDomainDeltaNodesCheckHealthEvaluation.md)
 - [ServiceFabricClientApis.UpgradeDomainInfo](docs/UpgradeDomainInfo.md)
 - [ServiceFabricClientApis.UpgradeDomainNodesHealthEvaluation](docs/UpgradeDomainNodesHealthEvaluation.md)
 - [ServiceFabricClientApis.UpgradeDomainState](docs/UpgradeDomainState.md)
 - [ServiceFabricClientApis.UpgradeKind](docs/UpgradeKind.md)
 - [ServiceFabricClientApis.UpgradeMode](docs/UpgradeMode.md)
 - [ServiceFabricClientApis.UpgradeOrchestrationServiceState](docs/UpgradeOrchestrationServiceState.md)
 - [ServiceFabricClientApis.UpgradeOrchestrationServiceStateSummary](docs/UpgradeOrchestrationServiceStateSummary.md)
 - [ServiceFabricClientApis.UpgradeState](docs/UpgradeState.md)
 - [ServiceFabricClientApis.UpgradeType](docs/UpgradeType.md)
 - [ServiceFabricClientApis.UploadChunkRange](docs/UploadChunkRange.md)
 - [ServiceFabricClientApis.UploadSession](docs/UploadSession.md)
 - [ServiceFabricClientApis.UploadSessionInfo](docs/UploadSessionInfo.md)
 - [ServiceFabricClientApis.ValidationFailedChaosEvent](docs/ValidationFailedChaosEvent.md)
 - [ServiceFabricClientApis.WaitForInbuildReplicaSafetyCheck](docs/WaitForInbuildReplicaSafetyCheck.md)
 - [ServiceFabricClientApis.WaitForPrimaryPlacementSafetyCheck](docs/WaitForPrimaryPlacementSafetyCheck.md)
 - [ServiceFabricClientApis.WaitForPrimarySwapSafetyCheck](docs/WaitForPrimarySwapSafetyCheck.md)
 - [ServiceFabricClientApis.WaitForReconfigurationSafetyCheck](docs/WaitForReconfigurationSafetyCheck.md)
 - [ServiceFabricClientApis.WaitingChaosEvent](docs/WaitingChaosEvent.md)


## Documentation for Authorization

Endpoints do not require authorization.

